simplified exception handling
