# argos-collector-api/api.yml
@@ -55,7 +55,7 @@ components:
       content:
         application/json:
           schema:
-            $ref: "#/components/schemas/ValidationError"
+            $ref: "#/components/schemas/Error"
     Error:
       description: server error
       content:
@@ -90,24 +90,5 @@ components:
       required:
         - message
       properties:
-        message:
-          type: string
-
-    ValidationError:
-      type: object
-      required:
-        - messages
-      properties:
-        messages:
-          type: array
-          items:
-            $ref: "#/components/schemas/ValidationMessage"
-    ValidationMessage:
-      type: object
-      required:
-        - message
-      properties:
-        field:
-          type: string
         message:
           type: string
